--- a/src/App.css
+++ b/src/App.css
@@ -15,10 +15,11 @@ html {
   height: 4rem;
   align-items: center;
   background: rgba(0,0,10,0.1);
-  position: fixed;
+  position: relative;
   top: 0px;
   width: 100vw;
   padding: 10px;
+  margin-bottom: 20px;
 }
 
 .search {
