--- a/src/App.css
+++ b/src/App.css
@@ -6,21 +6,28 @@
 html {
   font-size: 62.5%;
   color: white;
+  box-sizing: border-box;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 /* Topo Nav */
 .navBar {
   display: flex;
-  /* justify-content: space-between; */
+  justify-content: space-between;
   height: 4rem;
   align-items: center;
-  background: rgba(0,0,10,0.1);
-  position: relative;
+  background: #F2F0F2;
+  position: fixed;
   top: 0px;
   width: 100vw;
-  padding: 10px;
+  padding: 10px ;
   margin-bottom: 20px;
+  z-index: 1;
 }
+
 
 .search {
   display: flex;
@@ -36,8 +43,8 @@ html {
 .search > input {
   border: none;
   width: 100%;
-  padding: 3px;
-  font-size: 1.5rem;
+  padding: 2px;
+  font-size: 1rem;
   letter-spacing: 17px;
   font-family: cursive;
 }
@@ -60,6 +67,21 @@ html {
   height: 90%;
 }
 
+.div-icons {
+  display: flex;
+}
+
+.icons {
+  width: 4rem;
+  height: 4rem;
+  margin-right: 30px;
+}
+
+.icons > img {
+  margin-top: 5px;
+  width: 85%;
+  height: 85%;
+}
 
 /* MAIN */
 .allVideos {
@@ -107,12 +129,15 @@ html {
 /* FOOTER */
 footer {
   background-color: black;
-  height: 3rem;
+  height: 4.5rem;
   display: flex;
   justify-content: space-evenly;
   position: fixed;
   bottom: 0px;
-  background:rgba(50,50,50,0.3);
+  background: #F2F0F2;
+  width: 100vw;
+  z-index: 1;
+  align-items: center;
 }
 
 .icon-footer {
@@ -121,17 +146,44 @@ footer {
 }
 
 .figure-icon-footer {
-  width: 100%;
+  width: 3rem;
   height: 3em;
 }
 
 .figure-icon-footer > * {
   width: 100%;
   height: 100%;
+  margin-left: 50%;
 }
 
-@media (min-width: 800px) {
+/* media == md == 768 desktop*/
+@media (min-width: 768px) {
   html {
-    font-size: 100%;
+    font-size: 90%;
+  }
+
+  .navBar {
+    height: 2.5rem;
+    position: relative;
+  }
+
+  .search {
+    display: none;
+  }
+
+  .logo {
+    margin: 4px 7px 4px 14px;
+    
+  }
+
+  footer {
+    display: none;
+  }
+}
+
+/* media == md == 768 mobile*/
+@media (max-width: 768px) {
+  .div-icons {
+    display: none;
   }
 }
