--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,18 @@ body {
   overflow-x: hidden;
 }
 
+h5 {
+  color: black;
+}
+
+label {
+  color: black;
+}
+
+p {
+  color:black;
+}
+
 /* Topo Nav */
 .navBar {
   display: flex;
@@ -24,7 +36,6 @@ body {
   top: 0px;
   width: 100vw;
   padding: 10px ;
-  margin-bottom: 20px;
   z-index: 1;
 }
 
@@ -117,12 +128,13 @@ body {
 }
 
 .img-user {
-  width: 25%;
-  height: 35%;
+  width: 80%;
+  height: 80%;
 }
 
 .img-user > img {
-  height: 100%;
+  margin-left: 10%;
+  height: 50%;
   width: 50%;
 }
 
@@ -156,6 +168,61 @@ footer {
   margin-left: 50%;
 }
 
+/* CARD VIDEO */
+.img-you {
+  width: 100vw;
+  height: 70%;
+}
+
+.css-card-body {
+  padding: 2.2rem 0 2.2rem 0;
+  display: flex;
+  align-items: center;
+  height: 40%;  
+}
+
+.css-card-body > div > h5 {
+  width: 95%;
+}
+
+.css-card-body > div > p {
+  width: 95%;
+}
+
+.css-container {
+  margin-top: 20px;
+}
+
+
+/* FORM FILTER */
+.Union {
+  height: 100rem;
+}
+
+.div-you {
+  height: 33%;
+}
+
+.formFilter {
+  width: 85%;
+  margin-left: 20px;
+}
+
+.formFilter > textarea{
+  display: flex;
+  margin-top: 20px;
+  flex-direction: column;
+  resize: none;
+  border-radius: 7px;
+  height: 48px;
+  overflow: hidden;
+}
+
+.buttonForm {
+  width: 80%;
+  margin-left: 20px;
+}
+
 /* media == md == 768 desktop*/
 @media (min-width: 768px) {
   html {
@@ -164,7 +231,6 @@ footer {
 
   .navBar {
     height: 2.5rem;
-    position: relative;
   }
 
   .search {
@@ -179,11 +245,72 @@ footer {
   footer {
     display: none;
   }
+
+  .css-card-body {
+    padding: 0px;
+  }
+
+  .formAside {
+    background: #F5F6F6;
+    position: fixed;
+    height: 100vh;
+    width: 30%;
+    float: left;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-evenly;
+  }
+
+  .top-filter{
+    display: flex;
+    margin-top: 30px;
+  }
+
+  .clearbox {
+    clear: both;
+    height: 0;
+    width: 0; 
+  }
+
+  .css-card-body {
+    align-items: end;
+  }
+
+  .css-card-body > * {
+    margin-top: 20px;
+  }
+
+
+  .css-container {
+    height: inherit;
+    width: 70%;
+    position: relative;
+    float: right;
+  }
+
+  .img-you {
+    width: 100%;
+  }
+
+  #filter {
+    height: 2.5rem;
+    width: 2.5rem;
+    margin: 0px 20px;
+  }
 }
 
 /* media == md == 768 mobile*/
 @media (max-width: 768px) {
   .div-icons {
+    display: none;
+  }
+
+  .css-container {
+    padding-top: 60px;
+    padding-bottom: 50px;
+  }
+
+  .formAside {
     display: none;
   }
 }
