--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0px;
   padding: 0px;
 }
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  text-decoration: none;  
+  text-decoration: none;
 }
 
 h5 {
@@ -26,7 +26,7 @@ label {
 }
 
 p {
-  color:black;
+  color: black;
 }
 
 /* Topo Nav */
@@ -39,10 +39,9 @@ p {
   position: fixed;
   top: 0px;
   width: 100vw;
-  padding: 10px ;
+  padding: 10px;
   z-index: 1;
 }
-
 
 .search {
   display: flex;
@@ -55,7 +54,7 @@ p {
   align-items: center;
 }
 
-.search > input {
+.search>input {
   border: none;
   width: 100%;
   padding: 2px;
@@ -64,7 +63,7 @@ p {
   font-family: cursive;
 }
 
-.search > label > img {
+.search>label>img {
   height: 2.5rem;
   width: 2.5rem;
   padding: 10px;
@@ -76,7 +75,7 @@ p {
   height: 4rem;
 }
 
-.logo > a > img {
+.logo>a>img {
   margin-top: 3px;
   width: 90%;
   height: 90%;
@@ -92,7 +91,7 @@ p {
   margin-right: 30px;
 }
 
-.icons > a > img {
+.icons>a>img {
   margin-top: 5px;
   width: 85%;
   height: 85%;
@@ -109,11 +108,11 @@ p {
   height: 20rem;
 }
 
-.box-videos > * {
+.box-videos>* {
   margin: 25px;
 }
 
-.allVideos > * {
+.allVideos>* {
   padding: 5.5rem 8rem 1.5rem 3rem;
 }
 
@@ -122,7 +121,7 @@ p {
   height: 70%;
 }
 
-.img-boxes > img {
+.img-boxes>img {
   width: 100%;
   height: 100%;
 }
@@ -136,7 +135,7 @@ p {
   height: 80%;
 }
 
-.img-user > img {
+.img-user>img {
   margin-left: 10%;
   height: 50%;
   width: 50%;
@@ -166,7 +165,7 @@ footer {
   height: 3em;
 }
 
-.figure-icon-footer > * {
+.figure-icon-footer>* {
   width: 100%;
   height: 100%;
   margin-left: 50%;
@@ -185,11 +184,11 @@ footer {
   height: 40%;
 }
 
-.css-card-body > div > h5 {
+.css-card-body>div>h5 {
   width: 95%;
 }
 
-.css-card-body > div > p {
+.css-card-body>div>p {
   width: 95%;
 }
 
@@ -197,12 +196,11 @@ footer {
   margin-top: 20px;
 }
 
-
 /* FORM FILTER */
 .Union {
   /* height: 100rem; */
   height: 100vh;
-}
+}  /* main */
 
 .div-you {
   height: 33%;
@@ -213,7 +211,7 @@ footer {
   margin-left: 20px;
 }
 
-.formFilter > textarea{
+.formFilter>textarea {
   display: flex;
   margin-top: 20px;
   flex-direction: column;
@@ -233,12 +231,12 @@ footer {
   margin-left: 20px;
 }
 
-.div-you > a {
+.div-you>a {
   width: 25%;
   height: 125%;
 }
 
-/* VIDEO */
+/* VIDEO videosCards */
 .youPlayer {
   width: 100vw;
   height: 100vh;
@@ -247,6 +245,7 @@ footer {
 .youPlayerDiv {
   margin-top: 50px;
 }
+
 /* media == md == 768 desktop*/
 @media (min-width: 768px) {
   html {
@@ -263,7 +262,7 @@ footer {
 
   .logo {
     margin: 4px 7px 4px 14px;
-    
+
   }
 
   footer {
@@ -285,22 +284,22 @@ footer {
     justify-content: space-evenly;
   }
 
-  .top-filter{
+  .top-filter {
     display: flex;
     margin-top: 30px;
-  }
+  } /* filter,  */
 
   .clearbox {
     clear: both;
     height: 0;
-    width: 0; 
-  }
+    width: 0;
+  } /*  main */
 
   .css-card-body {
     align-items: end;
   }
 
-  .css-card-body > * {
+  .css-card-body>* {
     margin-top: 20px;
   }
 
@@ -317,7 +316,7 @@ footer {
 
   .img-user {
     display: none;
-  }
+  }  /* videosCards */
 
   .div-you {
     display: flex;
@@ -333,8 +332,8 @@ footer {
   }
 
   .linkVideoPlayer {
-    align-self:center;
-  }
+    align-self: center;
+  } /* VideoCards, CardVideo */
 
   #filter {
     height: 2.5rem;
@@ -352,13 +351,13 @@ footer {
   .css-container {
     padding-top: 60px;
     padding-bottom: 50px;
-  }
+  }  /* video card cardDiv */
 
   .formAside {
     display: none;
-  }
+  }  /* filter */
 
   .youPlayerDiv {
     margin-bottom: 30px;
-  }
+  }/* VideoPlayer */
 }
