--- a/src/App.css
+++ b/src/App.css
@@ -305,7 +305,7 @@ footer {
   }
 
   .css-container {
-    height: inherit;
+    /* height: inherit; */
     position: relative;
     float: right;
     display: flex;
@@ -337,9 +337,9 @@ footer {
   }
 
   #filter {
-    height: 2.5rem;
-    width: 2.5rem;
-    margin: 0px 20px;
+    height: 3rem;
+    width: 2.7rem;
+    margin: 0px 18px;
   }
 }
 
