--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,36 @@
-*{
+* {
   margin: 0px;
   padding: 0px;
+  /* botoes */
+  font-family: 'Liu Jian Mao Cao', cursive;   
+  /* font-family: 'Muli', sans-serif; */
+  /* font-family: 'Inconsolata', monospace; */
+  /* font-family: 'Oxygen', sans-serif; */
+  /* body-cards-t[itulo h4] */
+  /* font-family: 'Karla', sans-serif;  */
+  /* (inputs) */
+  /* font-family: 'Josefin Sans', sans-serif;  */
 }
-
 html {
   font-size: 62.5%;
   color: white;
   box-sizing: border-box;
 }
-
 body {
   overflow-x: hidden;
 }
-
 a {
-  text-decoration: none;  
+  text-decoration: none;
 }
-
-h5 {
+h4 {
   color: black;
 }
-
 label {
   color: black;
 }
-
 p {
-  color:black;
+  color: black;
 }
-
 /* Topo Nav */
 .navBar {
   display: flex;
@@ -39,11 +41,9 @@ p {
   position: fixed;
   top: 0px;
   width: 100vw;
-  padding: 10px ;
+  padding: 10px;
   z-index: 1;
 }
-
-
 .search {
   display: flex;
   background: #fff;
@@ -55,7 +55,11 @@ p {
   align-items: center;
 }
 
-.search > input {
+.search > a {
+  width: 100%;
+}
+
+.search > a > input {
   border: none;
   width: 100%;
   padding: 2px;
@@ -63,85 +67,69 @@ p {
   letter-spacing: 17px;
   font-family: cursive;
 }
-
-.search > label > img {
+.search>label>img {
   height: 2.5rem;
   width: 2.5rem;
   padding: 10px;
 }
-
 .logo {
   margin: 4px 7px 4px 2px;
   width: 5rem;
   height: 4rem;
 }
-
-.logo > a > img {
+.logo>a>img {
   margin-top: 3px;
   width: 90%;
   height: 90%;
 }
-
 .div-icons {
   display: flex;
 }
-
 .icons {
   width: 4rem;
   height: 4rem;
   margin-right: 30px;
 }
-
-.icons > a > img {
+.icons>a>img {
   margin-top: 5px;
   width: 85%;
   height: 85%;
 }
-
 /* MAIN */
 .allVideos {
   background-color: white;
   height: 100vh;
 }
-
 .box-videos {
   background-color: black;
   height: 20rem;
 }
-
-.box-videos > * {
+.box-videos>* {
   margin: 25px;
 }
-
-.allVideos > * {
+.allVideos>* {
   padding: 5.5rem 8rem 1.5rem 3rem;
 }
-
 .img-boxes {
   width: 100%;
   height: 70%;
 }
-
-.img-boxes > img {
+.img-boxes>img {
   width: 100%;
   height: 100%;
 }
-
 .box-info {
   display: flex;
 }
-
 .img-user {
   width: 80%;
   height: 80%;
 }
-
-.img-user > img {
+.img-user>img {
   margin-left: 10%;
   height: 50%;
   width: 50%;
 }
-
 /* FOOTER */
 footer {
   background-color: black;
@@ -155,65 +143,53 @@ footer {
   z-index: 1;
   align-items: center;
 }
-
 .icon-footer {
   width: 25%;
   margin: 0px 10px;
 }
-
 .figure-icon-footer {
   width: 3rem;
   height: 3em;
 }
-
-.figure-icon-footer > * {
+.figure-icon-footer>* {
   width: 100%;
   height: 100%;
   margin-left: 50%;
 }
-
 /* CARD VIDEO */
 .img-you {
   width: 100vw;
   height: 70%;
 }
-
 .css-card-body {
   padding: 2.2rem 0 2.2rem 0;
   display: flex;
   align-items: center;
   height: 40%;
 }
-
-.css-card-body > div > h5 {
+.css-card-body>div>h5 {
   width: 95%;
 }
-
-.css-card-body > div > p {
+.css-card-body>div>p {
   width: 95%;
 }
-
 .css-container {
   margin-top: 20px;
 }
-
-
 /* FORM FILTER */
 .Union {
   /* height: 100rem; */
   height: 100vh;
 }
-
+/* main */
 .div-you {
   height: 33%;
 }
-
 .formFilter {
   width: 85%;
   margin-left: 20px;
 }
-
-.formFilter > textarea{
+.formFilter>textarea {
   display: flex;
   margin-top: 20px;
   flex-direction: column;
@@ -223,27 +199,114 @@ footer {
   overflow: hidden;
   width: 80%
 }
-
 .form-control {
   width: 55%;
 }
-
 .buttonForm {
   width: 80%;
   margin-left: 20px;
 }
-
-.div-you > a {
-  width: 25%;
-  height: 125%;
+.div-you>a {
+  width: 330px;
+  height: 100px;
 }
 
-/* VIDEO */
+/* FORM LOGIN */
+.section-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.background-image {
+  background: url(/images/Street-Night-City.jpg) 100%;
+  opacity: 0.8;
+  z-index: -1;
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.container-form {
+  display: flex;
+  flex-flow: column wrap;
+  height: 80%;
+  width: 80%;
+  justify-content: center;
+  align-content: center;
+}
+
+.container-form > form {
+  height: 50%;
+  width: 50%;
+}
+
+.container-form > form > input {
+  background: rgba(0,0,0,1);
+  height: 50px;
+  color: white;
+  font-size: 1.2rem;
+}
+
+.container-form > form > button {
+  margin-top: 20px;
+  height: 10%;
+}
+
+.container-form > p {
+  font-size: 1.4rem;
+}
+
+.container-form > p > a {
+  color: white;
+}
+
+.container-form > * {
+  display: flex;
+  flex-direction: column;
+}
+
+/* USER INFO */
+
+.container-form-user {
+  display: flex;
+  flex-flow: column wrap;
+  height: 80%;
+  width: 80%;
+  margin-top: 20rem;
+  align-content: center;
+}
+
+.container-form-user > form {
+  display: flex;
+}
+
+.container-form-user > form > input {
+  width: 120px;
+  border: 2px solid rgba(0,0,0,0.3);
+}
+
+.user-info-img {
+  position: absolute;
+  top: 0;
+  margin-top: 7rem;
+  height: 80px;
+  width: 80px;
+  margin-bottom: 60px;
+  border-radius: 50px;
+  border: solid 5px black;
+}
+
+/* VIDEO videosCards */
 .youPlayer {
   width: 100vw;
   height: 100vh;
 }
-
 .youPlayerDiv {
   margin-top: 50px;
 }
@@ -252,28 +315,21 @@ footer {
   html {
     font-size: 90%;
   }
-
   .navBar {
     height: 2.5rem;
   }
-
   .search {
     display: none;
   }
-
   .logo {
     margin: 4px 7px 4px 14px;
-    
   }
-
   footer {
     display: none;
   }
-
   .css-card-body {
     padding: 0px;
   }
-
   .formAside {
     background: #F5F6F6;
     position: fixed;
@@ -284,26 +340,23 @@ footer {
     flex-flow: column;
     justify-content: space-evenly;
   }
-
-  .top-filter{
+  .top-filter {
     display: flex;
     margin-top: 30px;
   }
-
+  /* filter,  */
   .clearbox {
     clear: both;
     height: 0;
-    width: 0; 
+    width: 0;
   }
-
+  /*  main */
   .css-card-body {
     align-items: end;
   }
-
-  .css-card-body > * {
+  .css-card-body>* {
     margin-top: 20px;
   }
-
   .css-container {
     /* height: inherit; */
     position: relative;
@@ -314,11 +367,10 @@ footer {
     margin-top: 6rem;
     /* background: red; */
   }
-
   .img-user {
     display: none;
   }
-
+  /* videosCards */
   .div-you {
     display: flex;
     margin-left: 20px;
@@ -326,39 +378,185 @@ footer {
     padding: 10px 0px 0px 30px;
     border-radius: 160px; */
   }
-
   .img-you {
-    width: 80%;
+    width: 180px;
     margin-right: 40px;
+    height: 96px;
   }
-
   .linkVideoPlayer {
-    align-self:center;
+    align-self: center;
   }
-
+  .div-you>a {
+    width: inherit;
+    height: 100px;
+  }
+  /* VideoCards, CardVideo */
   #filter {
-    height: 3rem;
-    width: 2.7rem;
-    margin: 0px 18px;
+    height: 2.5rem;
+    width: 2.5rem;
+    margin: 0px 20px;
   }
 }
-
 /* media == md == 768 mobile*/
 @media (max-width: 768px) {
   .div-icons {
     display: none;
   }
-
   .css-container {
     padding-top: 60px;
     padding-bottom: 50px;
   }
-
+  /* video card cardDiv */
   .formAside {
     display: none;
   }
-
+  /* filter */
   .youPlayerDiv {
     margin-bottom: 30px;
   }
+  /* VideoPlayer */
+
+  /* USER-PROFILE */ 
+  .container-form-user > form {
+    margin-top: 10rem;
+    display: flex;
+    flex-direction: column;
+    /* height: 50%; */
+  }
+  
+  .container-form-user > form > input {
+    width: 50vw;
+    height: 2.5rem;
+    text-align: center;
+    border: 2px solid rgba(0,0,0,0.3);
+  }
+
+  .div-button-user-edits {
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
+    bottom: 0;
+    margin-bottom: 5rem;
+    left: 0;
+    width: 100%;
+  }
+
+  .div-button-user-edits > button {
+    margin-bottom: -6px;
+    margin-bottom: -6px;
+    height: 5rem;
+    width: 9rem;
+    font-size: 1.3rem;
+  }
+
+  /* FORM MOBILE DOM */
+  #searchDom {
+    display: none;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    background: rgba(20,30,50,0.8);
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+  }
+
+  .section-form-dom-mobile {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+  }
+  
+  .input-dom {
+    border: solid 5px black;
+    padding: 5px;
+  }
+
+  .button-dom-submit {
+
+  }
+
+  .div-button-dom {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-top: 40px;
+  }
+}
+
+
+
+/* BOTOES */
+/* classe btn é a geral] */
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  color: #212529;
+  text-align: center;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+@media (prefers-reduced-motion: reduce) {
+  .btn {
+    transition: none;
+  }
+}
+.btn:hover {
+  color: #212529;
+  text-decoration: none;
+}
+.btn:focus,
+.btn.focus {
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+.btn.disabled,
+.btn:disabled {
+  opacity: 0.65;
+}
+/* btn-secondary é o default com cores perto da nossa */
+.btn-secondary {
+  color: #fff;
+  background-color: #6c757d;
+  border-color: #6c757d;
+}
+.btn-secondary:hover {
+  color: #fff;
+  background-color: #5a6268;
+  border-color: #545b62;
+}
+.btn-secondary:focus,
+.btn-secondary.focus {
+  box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5);
+}
+.btn-secondary.disabled,
+.btn-secondary:disabled {
+  color: #fff;
+  background-color: #6c757d;
+  border-color: #6c757d;
+}
+.btn-secondary:not(:disabled):not(.disabled):active,
+.btn-secondary:not(:disabled):not(.disabled).active,
+.show>.btn-secondary.dropdown-toggle {
+  color: #fff;
+  background-color: #545b62;
+  border-color: #4e555b;
+}
+.btn-secondary:not(:disabled):not(.disabled):active:focus,
+.btn-secondary:not(:disabled):not(.disabled).active:focus,
+.show>.btn-secondary.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5);
 }
