--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,7 @@ p {
 }
 /* btn-secondary é o default com cores perto da nossa */
 .btn-secondary {
+  font-weight: 500;
   color: #fff;
   background-color: #6c757d;
   border-color: #6c757d;
@@ -112,7 +113,7 @@ p {
   justify-content: space-between;
   height: 4rem;
   align-items: center;
-  background: #F2F0F2;
+  background: black;
   position: fixed;
   top: 0px;
   width: 100vw;
@@ -123,11 +124,19 @@ p {
   display: flex;
   background: #fff;
   border: none;
-  width: 90%;
+  width: 70%;
   height: 90%;
   border-radius: 9px;
   margin-right: 30px;
   align-items: center;
+}
+.iconsHome {
+  width: 60px;
+  height: 60px;
+}
+.navImageHome {
+  width: 100%;
+  height: 100%;
 }
 
 .search > a {
@@ -137,8 +146,7 @@ p {
 .search > a > input {
   border: none;
   width: 100%;
-  padding: 2px;
-  font-size: 1rem;
+  font-size: 1.4rem;
   letter-spacing: 17px;
   font-family: cursive;
 }
@@ -213,18 +221,18 @@ footer {
   justify-content: space-evenly;
   position: fixed;
   bottom: 0px;
-  background: #F2F0F2;
   width: 100vw;
   z-index: 1;
   align-items: center;
 }
 .icon-footer {
   width: 25%;
-  margin: 0px 10px;
+  margin-left: 5px;
+  margin-bottom: 5px;
 }
 .figure-icon-footer {
-  width: 3rem;
-  height: 3em;
+  width: 3.2rem;
+  height: 3.2em;
 }
 .figure-icon-footer>* {
   width: 100%;
@@ -261,7 +269,7 @@ footer {
   height: 33%;
 }
 .formFilter {
-  width: 85%;
+  width: 90%;
   margin-left: 20px;
   height: 65%;
   display: flex;
@@ -311,7 +319,8 @@ footer {
 }
 
 .background-image {
-  background: url(/images/Street-Night-City.jpg) 100%;
+  background: url(/images/Street-Night-City.jpg);
+  background-size: cover;
   opacity: 0.8;
   z-index: -1;
   position: absolute;
@@ -347,19 +356,26 @@ footer {
 .container-form > form > input {
   background: rgba(255,255,255,0.6);
   height: 50px;
-  color: white;
+  color: black;
+  font-weight: 600;
   font-size: 1.2rem;
 }
 
 .container-form > form > button {
   margin-top: 20px;
   height: 50%;
+  text-shadow: 0px 2px 2px white;
 }
 
 .container-form > p {
   font-size: 1.4rem;
   align-self: flex-end;
   color: orange;
+  border: 2px solid orange;
+  box-shadow: 3px 3px 10px white;
+  margin-top: 44px;
+  padding: 11px;
+  text-shadow: 0 9px 12px rgba(0, 0, 0, 1);
 }
 
 .container-form > p > a {
@@ -377,15 +393,21 @@ footer {
   display: flex;
   flex-flow: column wrap;
   height: 80%;
-  width: 80%;
+  width: 100%;
   margin-top: 20rem;
   align-content: center;
+  border-top: 10px solid black;
+  border-width: 9px;
+  border-radius: 305px;
 }
 
 .container-form-user > form {
   display: flex;
   flex-flow: column wrap;
+  /* border: 15px solid aliceblue; */
+  padding: 32px;  
 }
+
 
 .container-form-user > form > input {
   width: 120px;
@@ -395,7 +417,7 @@ footer {
 .user-info-img {
   position: absolute;
   top: 0;
-  margin-top: 7rem;
+  margin-top: 2rem;
   height: 80px;
   width: 80px;
   margin-bottom: 60px;
@@ -417,7 +439,7 @@ footer {
     font-size: 90%;
   }
   .navBar {
-    background: rgb(196,196,196);
+    background: rgb(0,0,0);
     height: 1.1rem;
     padding: 15px;
   }
@@ -449,7 +471,7 @@ footer {
     background: rgb(229,229,229);
     position: fixed;
     height: 100vh;
-    width: 20%;
+    width: 18 %;
     float: left;
     display: flex;
     flex-flow: column;
@@ -514,7 +536,26 @@ footer {
     width: 2.5rem;
     margin: 0px 20px;
   }
+  /* USER-INFO */
+  .container-form-user > form > *{
+    margin-top: 20px;
+  }
 }
+ .info-user-write {
+  position: absolute;
+  left: 20%;
+  width: 100%;
+  bottom: 48%;
+  transform: translate(4%, -50%);
+  height: 29%;
+ }
+
+ .info-user-write > h3{
+  color:black;
+  font-size: 1.25rem;
+  position: relative;
+  left: 100px;
+ }
 /* media == md == 768 mobile*/
 @media (max-width: 769px) {
   .div-icons {
@@ -574,6 +615,11 @@ footer {
     font-size: 1.3rem;
   }
 
+  .info-user-write {
+    left: 20%;
+    transform: translate(-15%, -44%);
+  }
+
   /* Container Login */
   .container-form > form > input {
     height: 30px;
@@ -603,24 +649,28 @@ footer {
   }
   
   .input-dom {
-    border: solid 5px gainsboro;
+    border: solid 4px gainsboro;
     padding: 5px;
-    height: 50px;
+    height: 47px;
     width: 80%;
-    margin-bottom: 10px;
-    box-shadow: 
+    margin-bottom: 16px;
+    letter-spacing: 1px;
+    box-shadow: 1px 2px 15px black;
+    border-radius: 10px;
   }
 
   .button-dom-submit {
     height: 200%;
     width: 50%;
     font-size: 1.7rem;
+    text-shadow: 1px 0px 0px white;
   }
 
   .button-dom-exit {
     height: 200%;
     width: 50%;
     font-size: 1.7rem;
+    text-shadow: 1px 0px 0px white;
   }
 
   .div-button-dom {
