--- a/src/App.css
+++ b/src/App.css
@@ -414,6 +414,22 @@ footer {
   border: 2px solid rgba(0,0,0,0.3);
 }
 
+.input-label-user-profile > label {
+  color: black;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  font-size: 1.3rem;
+  font-family: 'Karla', sans-serif;
+  text-shadow: 1px 0px 1px black;
+  letter-spacing: 2px;
+}
+
+.input-label-user-profile > select {
+  border: 0px;
+  width: 100%;
+  height: 43%;
+}
+
 .user-info-img {
   position: absolute;
   top: 0;
@@ -540,21 +556,34 @@ footer {
   .container-form-user > form > *{
     margin-top: 20px;
   }
+  .input-label-user-profile > select {
+    height: 28px;
+  }
 }
  .info-user-write {
   position: absolute;
-  left: 20%;
+  left: 240px;
   width: 100%;
   bottom: 48%;
   transform: translate(4%, -50%);
   height: 29%;
+  font-style: italic;
  }
 
  .info-user-write > h3{
   color:black;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   position: relative;
-  left: 100px;
+  left: 72px;
+  margin-bottom: 17px;
+  font-style: italic;
+ }
+ .info-user-write > p{
+   color: black;
+   position: relative;
+   left: 100px;
+   font-size: 1.04rem;
+   font-style: italic;
  }
 /* media == md == 768 mobile*/
 @media (max-width: 769px) {
@@ -577,17 +606,31 @@ footer {
 
   /* USER-PROFILE */ 
   .container-form-user > form {
-    margin-top: 10rem;
-    display: flex;
-    flex-direction: column;
+    margin-top: 9rem;
+    display: grid;
+    grid-template-columns: 12.2rem 11.4rem;
     /* height: 50%; */
+    grid-auto-rows: 6.5rem;
+    grid-column-gap: 4.3rem;
+  }
+
+  .container-form > form > select {
+    border: none;
+    height: 74%;
   }
   
-  .container-form-user > form > input {
-    width: 50vw;
+  .input-label-user-profile > input {
+    width: 100%;
     height: 2.5rem;
     text-align: center;
     border: 2px solid rgba(0,0,0,0.3);
+  }
+
+  .input-label-user-profile > label {
+    color: black;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    font-size: 1.7rem;
   }
 
   .container-form > form > label {
