--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,9 @@
   margin: 0px;
   padding: 0px;
   /* botoes */
-  font-family: 'Liu Jian Mao Cao', cursive;   
+  /* font-family: 'Liu Jian Mao Cao', cursive;    */
   /* font-family: 'Muli', sans-serif; */
-  /* font-family: 'Inconsolata', monospace; */
+  font-family: 'Inconsolata', monospace;
   /* font-family: 'Oxygen', sans-serif; */
   /* body-cards-t[itulo h4] */
   /* font-family: 'Karla', sans-serif;  */
@@ -12,7 +12,7 @@
   /* font-family: 'Josefin Sans', sans-serif;  */
 }
 html {
-  font-size: 62.5%;
+  font-size: 65.5%;
   color: white;
   box-sizing: border-box;
 }
@@ -344,9 +344,21 @@ footer {
   background-color: rgba(203,240,440,0.2);
 }
 
+.container-form > span {
+  align-self: center;
+  font-family: 'Dancing Script', cursive;
+}
+
+.container-form > hr {
+  margin-bottom: 55px;
+  width: 95%;
+}
+
 .container-form > form {
   height: 50%;
-  width: 50%;
+  width: 78%;
+  align-self: flex-start;
+  margin-left: 55px
 }
 
 .container > form > label {
@@ -359,6 +371,9 @@ footer {
   color: black;
   font-weight: 600;
   font-size: 1.2rem;
+  margin-bottom: 10px;
+  padding: 16px;
+  border: rgba(255,255,255,0.7) 3px solid;
 }
 
 .container-form > form > button {
@@ -380,6 +395,11 @@ footer {
 
 .container-form > p > a {
   color: white;
+}
+
+.container-form > form > button {
+  font-size: 3.25rem;
+  letter-spacing: 6.2px;
 }
 
 .container-form > * {
@@ -441,6 +461,19 @@ footer {
   border: solid 5px black;
 }
 
+.btn-signup {
+  background-color: rgba(255,255,255,0.9);
+  color: black;
+  border: transparent;
+  font-size: 1.2rem !important;
+  letter-spacing: 3px !important;
+  font-weight: 600 !important;
+}
+.btn-signup:hover {
+  background-color: blue;
+  color: white;
+  text-shadow: none;
+}
 /* VIDEO videosCards */
 .youPlayer {
   width: 100vw;
@@ -542,6 +575,10 @@ footer {
   .linkVideoPlayer {
     align-self: center;
   }
+  .linkVideoPlayer > div > h4 {
+    letter-spacing: 1px;
+    font-size: 1.42rem;
+  }
   .div-you>a {
     width: inherit;
     height: 100px;
@@ -585,6 +622,7 @@ footer {
    font-size: 1.04rem;
    font-style: italic;
  }
+ 
 /* media == md == 768 mobile*/
 @media (max-width: 769px) {
   .div-icons {
@@ -618,12 +656,17 @@ footer {
     border: none;
     height: 74%;
   }
+
+  .container-form > form {
+    margin-left: 21px
+  }
   
   .input-label-user-profile > input {
     width: 100%;
     height: 2.5rem;
     text-align: center;
     border: 2px solid rgba(0,0,0,0.3);
+    font-size: 1.5rem;
   }
 
   .input-label-user-profile > label {
@@ -638,6 +681,7 @@ footer {
     position: relative;
     right: 30%;
     margin: 5px 0px 8px 0px;
+    font-size: 2.5rem;
   }
 
   .div-button-user-edits {
@@ -666,10 +710,19 @@ footer {
   /* Container Login */
   .container-form > form > input {
     height: 30px;
-    border: 10px solid transparent;
+    border: rgba(255,255,255,0.7) 3px solid;
     border-radius: 11px;
   }
 
+  .btn-signup {
+    font-size: 1.6rem !important;
+    background-color: rgba(255,255,255,0.9);
+    color: black;
+    border: transparent;
+    font-size: 1.2rem;
+    letter-spacing: 3px;
+    font-weight: 600;
+  }
   /* FORM MOBILE DOM */
   #searchDom {
     display: none;
@@ -722,6 +775,7 @@ footer {
     justify-content: center;
     margin-top: 40px;
   }
+
 }
 
 /* Media tablet */
