--- a/src/App.css
+++ b/src/App.css
@@ -345,8 +345,12 @@ footer {
 }
 
 .container-form > span {
+  position: relative;
+  top: 18px;
+  font-size: 5rem;
   align-self: center;
   font-family: 'Dancing Script', cursive;
+  letter-spacing: 3px;
 }
 
 .container-form > hr {
@@ -375,7 +379,9 @@ footer {
   padding: 16px;
   border: rgba(255,255,255,0.7) 3px solid;
 }
-
+.container-form > form > input:focus {
+  border: rgba(255, 255, 255, 0.9) 6px solid
+}
 .container-form > form > button {
   margin-top: 20px;
   height: 50%;
@@ -383,7 +389,7 @@ footer {
 }
 
 .container-form > p {
-  font-size: 1.4rem;
+  font-size: 2.4rem;
   align-self: flex-end;
   color: orange;
   border: 2px solid orange;
@@ -461,6 +467,14 @@ footer {
   border: solid 5px black;
 }
 
+.btn-submit-user {
+  background-color: green;
+}
+
+.btn-submit-user:hover {
+  background-color: rgb(5, 56, 5);
+}
+
 .btn-signup {
   background-color: rgba(255,255,255,0.9);
   color: black;
@@ -470,9 +484,13 @@ footer {
   font-weight: 600 !important;
 }
 .btn-signup:hover {
-  background-color: blue;
+  background-color: black;
   color: white;
   text-shadow: none;
+}
+.input-label-user-profile > input {
+  border: 2px black solid;
+  padding: 0.2rem;
 }
 /* VIDEO videosCards */
 .youPlayer {
@@ -480,7 +498,7 @@ footer {
   height: 100vh;
 }
 .youPlayerDiv {
-  margin-top: 50px;
+  margin-top: 44px;
 }
 /* media == md == 768 desktop*/
 @media (min-width: 769px) {
@@ -596,6 +614,7 @@ footer {
   .input-label-user-profile > select {
     height: 28px;
   }
+
 }
  .info-user-write {
   position: absolute;
@@ -609,7 +628,7 @@ footer {
 
  .info-user-write > h3{
   color:black;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   position: relative;
   left: 72px;
   margin-bottom: 17px;
@@ -619,7 +638,7 @@ footer {
    color: black;
    position: relative;
    left: 100px;
-   font-size: 1.04rem;
+   font-size: 1.4rem;
    font-style: italic;
  }
  
@@ -635,6 +654,10 @@ footer {
   /* video card cardDiv */
   .formAside {
     display: none;
+  }
+  h4 {
+    font-size: 1.5rem;
+    color: black;
   }
   /* filter */
   .youPlayerDiv {
@@ -665,7 +688,6 @@ footer {
     width: 100%;
     height: 2.5rem;
     text-align: center;
-    border: 2px solid rgba(0,0,0,0.3);
     font-size: 1.5rem;
   }
 
@@ -679,9 +701,13 @@ footer {
   .container-form > form > label {
     width: 100vw;
     position: relative;
-    right: 30%;
     margin: 5px 0px 8px 0px;
     font-size: 2.5rem;
+  }
+
+  .container-form > span {
+    position: relative;
+    top: 14px;
   }
 
   .div-button-user-edits {
@@ -753,6 +779,10 @@ footer {
     letter-spacing: 1px;
     box-shadow: 1px 2px 15px black;
     border-radius: 10px;
+  }
+  .input-dom:focus {
+    border: solid 8px gainsboro;
+    box-shadow: 5px 17px 10px black;
   }
 
   .button-dom-submit {
